fix spacing

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,9 @@
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: 700px;
 }
 
@@ -15,202 +14,119 @@
   align-self: baseline;
   margin-top: 0;
   position: absolute;
-    left: 0;
-    top: 0;
-    margin-left: 10rem;
-    margin-top: 20px;
-    height: 200px;
-    width: 200px;
+  left: 0;
+  top: 0;
+  margin-left: 10rem;
+  margin-top: 20px;
+  height: 200px;
+  width: 200px;
 }
 
-.hero-text {
+.hero-button {
   text-align: center;
 }
 
-
-.hero-second-header {
+.hero-h2 {
   font-family: 'Anybody', cursive;
   color: white;
   font-size: 2.7rem;
   text-align: center;
 }
 
-
-
-.body-content {
+.section5 {
   display: flex;
   position: relative;
   align-items: center;
   height: 600px;
-  
-  
 }
 
-.body-content1 {
-background:
-url(/Users/lellis/front-end-dev-test/src/assets/img-1.jpg) right/50% 100% no-repeat,
-linear-gradient(white, white) left/50% 100% no-repeat;
- margin: 0;
-  
-  
+.section1 {
+  background:
+  url(/Users/lellis/front-end-dev-test/src/assets/img-1.jpg) right/50% 100% no-repeat,
+  linear-gradient(white, white) left/50% 100% no-repeat;
+  margin: 0;
   display: flex;
-    
   align-items: center;
-    height: 600px;
-    padding: 15rem;
+  height: 600px;
+  padding: 13%;
 }
 
-.body-text1 {
+.section-text1 {
   width: 500px;
-  
 }
 
-
-
-
-
-.body-text {
-  
-  padding: 15rem;
+.section3-text  {
+  padding: 13%;
 }
 
-.banner1-text {
-  padding: 15rem;
+.section2-text {
+  padding: 13%;
   justify-content: flex-start;
   align-self: center;
 }
 
-.right {
-  display: flex;
-  flex-direction: column-reverse;
-  flex-wrap: wrap;
-  align-content: flex-end;
- 
-  
-}
 
 .body-text2 {
   flex-wrap: wrap;
   position: relative;
-  
 }
 
-
-
-
-.banner-1 {
+.section2 {
   background-image: url(/Users/lellis/front-end-dev-test/src/assets/banner-1.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 600px;
   display: flex;
-  
 }
 
-.banner-2 {
+.section4 {
   background-image: url(/Users/lellis/front-end-dev-test/src/assets/banner-2.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   height: 600px;
   align-items: center;
-
-  
- 
-  
 }
 
-.banner-2-text {
-margin-left: auto;
-  
+.section4-text {
+  margin-left: auto;
   align-items: flex-end;
-    width: 300px;
+  width: 300px;
   flex-direction: column;
- 
   display: flex;
   margin-right: 350px;
   padding-top: 150px;
- 
-  
 }
 
-.texttext {
-  text-align: left;
-  
-}
-
-
-
-.body-container {
+.section3 {
   display: flex;
-}
-
-.body-content-2 {
-  display: flex;
-    position: relative;
-    align-items: center;
-    height: 600px;
-    background: linear-gradient(to right, white 50%, #fafafa 50%)
-
+  align-items: center;
+  height: 600px;
+  background: linear-gradient(to right, white 50%, #fafafa 50%);
 }
 
 .icon-container {
-  
   display: grid;
-    grid-template-columns: 200px 200px;
-    grid-row: auto auto;
-    grid-column-gap: 100px;
-    grid-row-gap: 100px;
+  grid-template-columns: 200px 200px;
+  grid-row: auto auto;
+  grid-column-gap: 100px;
+  grid-row-gap: 100px;
   width: 250%;
   justify-content: center;
-  
-  
-  
-
- 
-  
 }
 
 .inner-icon {
   border: purple solid 1px;
-    border-radius: 50%;
-    height: 100px;
-    width: 100px;
-    
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
 }
-
 
 .icon {
   display: flex;
-  
-    
-    /* border-radius: 50%;
-    border: solid purple 1px; */
-    
-    
-  
-  
   flex-direction: column;
   align-items: center;
-}
-
-
-
-
-
-
-
-
-
-
-.d-block w-100 {
-  color: red;
-}
-
-.more {
-  color: purple !important;
-  font-weight: bold !important;
 }
 
 .h1-black {
@@ -223,3 +139,5 @@ margin-left: auto;
   justify-content: center;
   gap: 20px;
 }
+
+
